cmake_minimum_required(VERSION 3.10)
find_package(MPI)

if(DEFINED DISABLE_MPI)
  message(WARNING "MPI disabled, MPI adaptor will not be tested.")
else()
  if(MPI_FOUND)
    add_subdirectory(./mpi)
  else()
    message(WARNING "MPI not found, MPI adaptor will not be tested.")
  endif()
endif()

# add_subdirectory(./cufft)

